--- a/_sass/_boxes.scss
+++ b/_sass/_boxes.scss
@@ -85,6 +85,24 @@ span.error {
   .__next { float: left; }
 }
 
+.table {
+  border-collapse: separate;
+  border-spacing: 0.2rem;
+  margin: 0rem -0.45rem;
+  width: 100%;
+
+  th, td {
+    text-align: left;
+    padding: 0.25rem;
+    border-bottom: 1px solid #aaa;
+  }
+
+  th {
+    font-weight: 500;
+    padding: 0.5rem 0.25rem;
+  }
+}
+
 .tag-menu {
   overflow: hidden;
   margin: 0.5rem 0;
