--- a/css/npw2018.scss
+++ b/css/npw2018.scss
@@ -113,7 +113,7 @@ nav {
   a {
     color: $text-color;
     text-decoration: none;
-    padding: 1rem;
+    padding: 1rem 0.5rem;
     display: block;
 
     @include media("<=small") {
