Not so much padding for nav.sub-nav

--- a/_sass/_act.scss
+++ b/_sass/_act.scss
@@ -28,6 +28,10 @@ dl.user-show_info {
 }
 
 nav.sub-nav {
+  background: transparent;
+  border-bottom: 1px solid #ddd;
+  margin: -1rem -3rem;
+
   a {
     padding: 0.5rem;
   }
