...but should have margin-bottom for sub-nav

--- a/_sass/_act.scss
+++ b/_sass/_act.scss
@@ -30,7 +30,7 @@ dl.user-show_info {
 nav.sub-nav {
   background: transparent;
   border-bottom: 1px solid #ddd;
-  margin: -1rem -3rem;
+  margin: -1rem -3rem 1rem -3rem;
 
   a {
     padding: 0.5rem;
