Add active styling to manu elements

--- a/css/npw2018.scss
+++ b/css/npw2018.scss
@@ -113,6 +113,7 @@ nav {
   a {
     color: $text-color;
     text-decoration: none;
+    text-transform: capitalize;
     padding: 1rem 0.5rem;
     display: block;
 
