Improved checkbox styling

--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -72,7 +72,11 @@ form {
     }
 
     &.-checkbox {
-      margin: 1rem 0;
+      margin-bottom: 1rem;
+
+      input {
+        vertical-align: text-top;
+      }
     }
 
     &.-radio {
