Add padding/margin to tag cloud

--- a/_sass/_act.scss
+++ b/_sass/_act.scss
@@ -27,6 +27,11 @@ dl.user-show_info {
   }
 }
 
+.talks-list_tag-cloud {
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+}
+
 nav.sub-nav {
   background: transparent;
   border-bottom: 1px solid #ddd;
