Improved nav and .sub-nav

--- a/css/npw2018.scss
+++ b/css/npw2018.scss
@@ -19,6 +19,7 @@ $seperator-border: 1px solid #777;
 @import "include-media";
 @import "reset";
 @import "typography";
+@import "nav";
 @import "forms";
 @import "boxes";
 @import "entry";
@@ -34,161 +35,3 @@ body {
   background-attachment: fixed;
 }
 
-.main-header {
-  padding: 4rem 1rem 6rem 1rem;
-
-  &, a, h1, h2, p {
-    color: #fff;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 800;
-    text-shadow: 0 0 3px #111;
-  }
-
-  h1 {
-    font-size: 3.4rem;
-    line-height: 1.4em;
-    margin: 0 0 1rem 0;
-  }
-
-  h2 {
-    font-size: 2rem;
-    margin: 0;
-  }
-
-  p {
-    font-size: 1.5rem;
-  }
-
-  @include media(">small") {
-    p {
-      font-size: 1.5rem;
-      margin: 0;
-      float: right;
-      position: relative;
-      top: -1.5rem;
-    }
-  }
-
-  @include media("<=small") {
-    padding: 2rem 1rem;
-
-    h1 { font-size: 2.5rem; }
-    h2 { font-size: 1.6rem; }
-  }
-}
-
-nav,
-.content,
-.paginator,
-.site-footer {
-  background: rgba(255, 255, 255, 0.94);
-  padding: 2rem;
-
-  @include media("<=small") {
-    padding: 1rem;
-  }
-
-  @include media(">large") {
-    padding: 3rem;
-  }
-}
-
-nav {
-  border-bottom: $seperator-border;
-  padding-top: 0;
-  padding-bottom: 0;
-
-  ul {
-    list-style: none;
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
-  }
-
-  li {
-    margin: 0;
-    float: left;
-  }
-
-  a {
-    color: $text-color;
-    text-decoration: none;
-    text-transform: capitalize;
-    padding: 1rem 0.5rem;
-    display: block;
-
-    @include media("<=small") {
-      padding: 0.5rem 1rem;
-    }
-
-    &:hover {
-      background: #e0e0e0;
-    }
-  }
-}
-
-.content {
-  padding-top: 1rem;
-}
-
-.site-footer {
-  border-top: $seperator-border;
-
-  ul {
-    overflow: hidden;
-  }
-
-  li {
-    float: left;
-
-    &::after {
-      content: "\00a0\2014\00a0";
-    }
-
-    &.last::after {
-      content: "";
-    }
-  }
-
-  h4, a {
-    color: $link-color;
-  }
-
-  img {
-    vertical-align: middle;
-  }
-
-  .column {
-    text-align: center;
-  }
-}
-
-.google-maps {
-  height: 320px;
-}
-
-.entry.-in-list {
-  border: 0;
-}
-
-ul.committee {
-  list-style: none;
-  padding: 0;
-
-  li {
-    margin: 0.4rem 0;
-  }
-
-  a {
-    text-decoration: none;
-  }
-
-  img {
-    height: 60px;
-    vertical-align: middle;
-  }
-
-  span {
-    margin-left: 1rem;
-  }
-}
