--- a/_includes/npw2018/footer.html
+++ b/_includes/npw2018/footer.html
@@ -15,14 +15,18 @@
 <footer class="site-footer">
   <ul>
     <li>
-      Powered by <a href="/">Oslo.pm</a>
-      and <a href="https://github.com/oslo-pm">Github</a>
+      Powered by <a href="/">Oslo.pm</a>,
+      <a href="https://github.com/oslo-pm">Github</a>
+      and <a href="https://github.com/Act-Conferences">Act</a>
     </li>
     <li>
       <a href="https://github.com/oslo-pm/NPW2018/issues">Tasks</a>
     </li>
     <li>
-      <a href="https://www.meetup.com/Oslo-pm/" class="page-link">Meetup</a>
+      <a href="https://www.meetup.com/Oslo-pm/">Meetup</a>
+    </li>
+    <li>
+      <a href="npw2018/info#contact">Contact</a>
     </li>
     <li class="last">
       <a href="{{ "/npw2018/feed.xml" | prepend: site.baseurl }}"><img src="/images/rss.gif" alt="Atom feed"></a>
