--- a/_includes/npw2018/header.html
+++ b/_includes/npw2018/header.html
@@ -1,6 +1,6 @@
 {% assign d = site.data.npw2018 %}
 <div class="main-header">
-  <h1>Nordic perl workshop and Mojoconf</h1>
+  <h1>Nordic Perl Workshop and Mojoconf</h1>
   <h2>in {{d.conference.where.name}}</h2>
   <p>{{d.conference.start | date: "%-d" }} - {{d.conference.stop | date: "%-d %B, %Y" }}</p>
 </div>
