Use default cursor on disabled button

--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -168,6 +168,7 @@ input[type=submit], // Add styling for [type=submit] since there's not everythin
     background: #999;
     border-color: #fff;
     color: #eee;
+    cursor: default;
   }
 }
 
