Changed sub_nav to schedule, instead of talks

--- a/_includes/npw2018/sub_nav.html
+++ b/_includes/npw2018/sub_nav.html
@@ -1,7 +1,7 @@
 <nav class="sub-nav">
   <ul>
     <li><a href="http://npw2018.oslo.pm/npw2018/newtalk">Submit a talk</a></li>
-    <li><a href="http://npw2018.oslo.pm/npw2018/talks">Talks</a></li>
+    <li><a href="http://npw2018.oslo.pm/npw2018/schedule">Schedule</a></li>
     <li><a href="http://npw2018.oslo.pm/npw2018/main">Login/Register</a></li>
   </ul>
 </nav>
