fix broken contact link in footer

--- a/_includes/npw2018/footer.html
+++ b/_includes/npw2018/footer.html
@@ -26,7 +26,7 @@
       <a href="https://www.meetup.com/Oslo-pm/">Meetup</a>
     </li>
     <li>
-      <a href="npw2018/info#contact">Contact</a>
+      <a href="/npw2018/info#contact">Contact</a>
     </li>
     <li class="last">
       <a href="{{ "/npw2018/feed.xml" | prepend: site.baseurl }}"><img src="/images/rss.gif" alt="Atom feed"></a>
