--- a/_includes/npw2018/sub_nav.html
+++ b/_includes/npw2018/sub_nav.html
@@ -1,7 +1,6 @@
 <nav class="sub-nav">
   <ul>
-    <li><a href="https://npw2018.oslo.pm/npw2018/newtalk">Submit a talk</a></li>
     <li><a href="https://npw2018.oslo.pm/npw2018/schedule">Schedule</a></li>
-    <li><a href="https://npw2018.oslo.pm/npw2018/main">Login/Register</a></li>
+    <li><a href="https://npw2018.oslo.pm/npw2018/main">Login</a></li>
   </ul>
 </nav>
